--- a/Itronic/ItronicTrgovina/ItronicTrgovina.csproj
+++ b/Itronic/ItronicTrgovina/ItronicTrgovina.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoadingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoadingForm.Designer.cs">
+      <DependentUpon>LoadingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObracunWF.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
       <DependentUpon>ReklamacijaWF.cs</DependentUpon>
     </Compile>
     <Compile Include="Reklamacije.cs" />
+    <EmbeddedResource Include="LoadingForm.resx">
+      <DependentUpon>LoadingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ObracunWF.resx">
       <DependentUpon>ObracunWF.cs</DependentUpon>
     </EmbeddedResource>
