--- a/Software/ItronicClassLibrary/ItronicClassLibrary.csproj
+++ b/Software/ItronicClassLibrary/ItronicClassLibrary.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>12b93902-853b-4a93-a815-21610fa87e69</ProjectGuid>
+    <ProjectGuid>{12B93902-853B-4A93-A815-21610FA87E69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ItronicClassLibrary</RootNamespace>
@@ -31,24 +31,109 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\Itronic\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\Itronic\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Feedback.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Financije.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ItronicModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ItronicModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ItronicModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ItronicModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ItronicModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Kategorija.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Korisnik.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Kupac.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Primka.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Proizvod.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Racun.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Recenzija.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Reklamacija.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StavkaPrimke.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StavkaRacuna.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TipKorisnika.cs">
+      <DependentUpon>ItronicModel.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EntityDeploy Include="ItronicModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ItronicModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
+    <None Include="ItronicModel.edmx.diagram">
+      <DependentUpon>ItronicModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ItronicModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ItronicModel.Context.cs</LastGenOutput>
+      <DependentUpon>ItronicModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="ItronicModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ItronicModel.edmx</DependentUpon>
+      <LastGenOutput>ItronicModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
