--- a/Software/ItronicStore/ItronicStore.csproj
+++ b/Software/ItronicStore/ItronicStore.csproj
@@ -73,6 +73,13 @@
     <Compile Include="FinancijeWF.Designer.cs">
       <DependentUpon>FinancijeWF.cs</DependentUpon>
     </Compile>
+    <Compile Include="NoviZapisWF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoviZapisWF.Designer.cs">
+      <DependentUpon>NoviZapisWF.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RacunID.cs" />
     <Compile Include="RecenzijaWF.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FinancijeWF.resx">
       <DependentUpon>FinancijeWF.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoviZapisWF.resx">
+      <DependentUpon>NoviZapisWF.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
