--- a/Software/Itronic/Itronic.csproj
+++ b/Software/Itronic/Itronic.csproj
@@ -33,7 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="ItronicClassLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ItronicClassLibrary\bin\Debug\ItronicClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,12 +57,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs" />
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmAzurirajProizvod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAzurirajProizvod.Designer.cs">
+      <DependentUpon>FrmAzurirajProizvod.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDodajProizvod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDodajProizvod.Designer.cs">
+      <DependentUpon>FrmDodajProizvod.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmKupac.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmKupac.Designer.cs">
+      <DependentUpon>FrmKupac.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPregledProizvoda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPregledProizvoda.Designer.cs">
+      <DependentUpon>FrmPregledProizvoda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPrimka.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPrimka.Designer.cs">
+      <DependentUpon>FrmPrimka.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmProdaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmProdaja.Designer.cs">
+      <DependentUpon>FrmProdaja.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmPregledProizvoda.resx">
+      <DependentUpon>FrmPregledProizvoda.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,6 +107,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
