Dizajn + metode forme za naručivanje zaliha

--- a/Software/Itronic/Itronic.csproj
+++ b/Software/Itronic/Itronic.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="FrmPregledProizvoda.resx">
       <DependentUpon>FrmPregledProizvoda.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmPrimka.resx">
+      <DependentUpon>FrmPrimka.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
