--- a/Software/Itronic/Itronic.csproj
+++ b/Software/Itronic/Itronic.csproj
@@ -101,11 +101,17 @@
     <EmbeddedResource Include="FrmDodajProizvod.resx">
       <DependentUpon>FrmDodajProizvod.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmKupac.resx">
+      <DependentUpon>FrmKupac.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmPregledProizvoda.resx">
       <DependentUpon>FrmPregledProizvoda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrimka.resx">
       <DependentUpon>FrmPrimka.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmProdaja.resx">
+      <DependentUpon>FrmProdaja.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
