--- a/Software/Domagoj_Grundler/Itronic/App.config
+++ b/Software/Domagoj_Grundler/Itronic/App.config
@@ -1,20 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 	<connectionStrings>
-		<add name="entities" connectionString="metadata=res://*/ItronicModel.csdl|res://*/ItronicModel.ssdl|res://*/ItronicModel.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+		<add name="entities" connectionString="metadata=res://*/ItronicModel.csdl|res://*/ItronicModel.ssdl|res://*/ItronicModel.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
 			<parameters>
-				<parameter value="mssqllocaldb" />
+				<parameter value="mssqllocaldb"/>
 			</parameters>
 		</defaultConnectionFactory>
 		<providers>
-			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
 		</providers>
 	</entityFramework>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
