--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -73,17 +74,17 @@
     <Compile Include="Financije.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="FinancijeWF.cs">
+    <Compile Include="GrafickiPrikaz.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FinancijeWF.Designer.cs">
-      <DependentUpon>FinancijeWF.cs</DependentUpon>
+    <Compile Include="GrafickiPrikaz.Designer.cs">
+      <DependentUpon>GrafickiPrikaz.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginWF.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginWF.designer.cs">
-      <DependentUpon>LoginWF.cs</DependentUpon>
+    <Compile Include="Login.designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="NoviZapisWF.cs">
       <SubType>Form</SubType>
@@ -97,11 +98,11 @@
     <Compile Include="PocetnaFormaWF.designer.cs">
       <DependentUpon>PocetnaFormaWF.cs</DependentUpon>
     </Compile>
-    <Compile Include="RecenzijaWF.cs">
+    <Compile Include="KorisnickaRecenzija.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RecenzijaWF.Designer.cs">
-      <DependentUpon>RecenzijaWF.cs</DependentUpon>
+    <Compile Include="KorisnickaRecenzija.Designer.cs">
+      <DependentUpon>KorisnickaRecenzija.cs</DependentUpon>
     </Compile>
     <Compile Include="RegistrationWF.cs">
       <SubType>Form</SubType>
@@ -174,11 +175,11 @@
     <EmbeddedResource Include="PovratnaInformacija.resx">
       <DependentUpon>PovratnaInformacija.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FinancijeWF.resx">
-      <DependentUpon>FinancijeWF.cs</DependentUpon>
+    <EmbeddedResource Include="GrafickiPrikaz.resx">
+      <DependentUpon>GrafickiPrikaz.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginWF.resx">
-      <DependentUpon>LoginWF.cs</DependentUpon>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NoviZapisWF.resx">
       <DependentUpon>NoviZapisWF.cs</DependentUpon>
@@ -192,8 +193,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RecenzijaWF.resx">
-      <DependentUpon>RecenzijaWF.cs</DependentUpon>
+    <EmbeddedResource Include="KorisnickaRecenzija.resx">
+      <DependentUpon>KorisnickaRecenzija.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RegistrationWF.resx">
       <DependentUpon>RegistrationWF.cs</DependentUpon>
