--- a/Software/Dino_Sokec/ItronicStore/App.config
+++ b/Software/Dino_Sokec/ItronicStore/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=a4*IK6S=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="connection" connectionString="metadata=res://*/TrgovinaBP.csdl|res://*/TrgovinaBP.ssdl|res://*/TrgovinaBP.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
