--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -33,12 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -62,17 +56,11 @@
     <Compile Include="DolazneReklamacije.Designer.cs">
       <DependentUpon>DolazneReklamacije.cs</DependentUpon>
     </Compile>
-    <Compile Include="Feedback.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="PovratnaInformacija.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PovratnaInformacija.Designer.cs">
       <DependentUpon>PovratnaInformacija.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Financije.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="GrafickiPrikaz.cs">
       <SubType>Form</SubType>
@@ -116,58 +104,25 @@
     <Compile Include="ReklamacijaWF.Designer.cs">
       <DependentUpon>ReklamacijaWF.cs</DependentUpon>
     </Compile>
-    <Compile Include="Kategorija.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Korisnik.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Kupac.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Primka.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Proizvod.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Racun.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="TrgovinaBP.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TrgovinaBP.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Recenzija.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="TrgovinaBP.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TrgovinaBP.tt</DependentUpon>
     </Compile>
-    <Compile Include="Reklamacija.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="TrgovinaBP.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TrgovinaBP.edmx</DependentUpon>
     </Compile>
-    <Compile Include="StavkaPrimke.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="StavkaRacuna.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="sysdiagrams.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TipKorisnika.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Users.cs">
+      <DependentUpon>TrgovinaBP.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="DolazneReklamacije.resx">
       <DependentUpon>DolazneReklamacije.cs</DependentUpon>
@@ -205,13 +160,6 @@
     <EmbeddedResource Include="ReklamacijaWF.resx">
       <DependentUpon>ReklamacijaWF.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -222,20 +170,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EntityDeploy Include="TrgovinaBP.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TrgovinaBP.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="TrgovinaBP.edmx.diagram">
+      <DependentUpon>TrgovinaBP.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model1.Context.tt">
+    <Content Include="TrgovinaBP.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>TrgovinaBP.edmx</DependentUpon>
+      <LastGenOutput>TrgovinaBP.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Model1.tt">
+    <Content Include="TrgovinaBP.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
+      <DependentUpon>TrgovinaBP.edmx</DependentUpon>
+      <LastGenOutput>TrgovinaBP.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
