--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Admin.cs">
       <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
+    <Compile Include="AdminPrijava.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminPrijava.Designer.cs">
+      <DependentUpon>AdminPrijava.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dobavljac.cs">
       <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
@@ -153,6 +159,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TrgovinaItronic.edmx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminPrijava.resx">
+      <DependentUpon>AdminPrijava.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DolazneReklamacije.resx">
       <DependentUpon>DolazneReklamacije.cs</DependentUpon>
     </EmbeddedResource>
