--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -84,6 +84,12 @@
     <Compile Include="Izbornik.Designer.cs">
       <DependentUpon>Izbornik.cs</DependentUpon>
     </Compile>
+    <Compile Include="IzbornikAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IzbornikAdmin.Designer.cs">
+      <DependentUpon>IzbornikAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Kategorija.cs">
       <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
@@ -173,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Izbornik.resx">
       <DependentUpon>Izbornik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IzbornikAdmin.resx">
+      <DependentUpon>IzbornikAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PovratnaInformacija.resx">
       <DependentUpon>PovratnaInformacija.cs</DependentUpon>
