--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -35,13 +35,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -60,17 +57,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
     <Compile Include="AdminPrijava.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AdminPrijava.Designer.cs">
       <DependentUpon>AdminPrijava.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Dobavljac.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
     <Compile Include="DolazneReklamacije.cs">
       <SubType>Form</SubType>
@@ -89,21 +80,6 @@
     </Compile>
     <Compile Include="IzbornikAdmin.Designer.cs">
       <DependentUpon>IzbornikAdmin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Kategorija.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Korisnik.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Kvartal.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Obracun.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Odgovor.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
     <Compile Include="PovratnaInformacija.cs">
       <SubType>Form</SubType>
@@ -135,18 +111,9 @@
     <Compile Include="KorisnickaRecenzija.Designer.cs">
       <DependentUpon>KorisnickaRecenzija.cs</DependentUpon>
     </Compile>
-    <Compile Include="Proizvod.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Recenzija.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
     <Compile Include="RegistracijaKorisnika.cs" />
     <Compile Include="RegistracijaKorisnika.designer.cs">
       <DependentUpon>RegistracijaKorisnika.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Reklamacija.cs">
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
     </Compile>
     <Compile Include="ReklamacijaWF.cs">
       <SubType>Form</SubType>
@@ -156,21 +123,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrgovinaItronic.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TrgovinaItronic.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TrgovinaItronic.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TrgovinaItronic.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TrgovinaItronic.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TrgovinaItronic.edmx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="AdminPrijava.resx">
       <DependentUpon>AdminPrijava.cs</DependentUpon>
     </EmbeddedResource>
@@ -223,13 +175,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EntityDeploy Include="TrgovinaItronic.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TrgovinaItronic.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="TrgovinaItronic.edmx.diagram">
-      <DependentUpon>TrgovinaItronic.edmx</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -241,22 +186,10 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KlasaUpravljanja\KlasaUpravljanja.csproj">
-      <Project>{45b451c3-3631-4a66-8fe9-7d553c4e345b}</Project>
-      <Name>KlasaUpravljanja</Name>
+    <ProjectReference Include="..\ClassLibrary2\ClassLibrary2.csproj">
+      <Project>{3cc2c205-a623-44ea-a243-be2a870a3fee}</Project>
+      <Name>ClassLibrary2</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TrgovinaItronic.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TrgovinaItronic.edmx</DependentUpon>
-      <LastGenOutput>TrgovinaItronic.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="TrgovinaItronic.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TrgovinaItronic.edmx</DependentUpon>
-      <LastGenOutput>TrgovinaItronic.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
