--- a/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
+++ b/Software/Dino_Sokec/ItronicStore/ItronicStore.csproj
@@ -57,10 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminPrijava.cs">
+    <Compile Include="Prijava\AdminPrijava.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminPrijava.Designer.cs">
+    <Compile Include="Prijava\AdminPrijava.Designer.cs">
       <DependentUpon>AdminPrijava.cs</DependentUpon>
     </Compile>
     <Compile Include="Reklamacija\DolazneReklamacije.cs">
@@ -93,10 +93,10 @@
     <Compile Include="Grafikon\GrafickiPrikaz.Designer.cs">
       <DependentUpon>GrafickiPrikaz.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="Prijava\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.designer.cs">
+    <Compile Include="Prijava\Login.designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Reklamacija\NovaReklamacija.cs">
@@ -113,7 +113,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AdminPrijava.resx">
+    <EmbeddedResource Include="Prijava\AdminPrijava.resx">
       <DependentUpon>AdminPrijava.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reklamacija\DolazneReklamacije.resx">
@@ -131,7 +131,7 @@
     <EmbeddedResource Include="Grafikon\GrafickiPrikaz.resx">
       <DependentUpon>GrafickiPrikaz.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="Prijava\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reklamacija\NovaReklamacija.resx">
