Poboljšan je ER dijagram

--- a/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
+++ b/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
@@ -59,15 +59,15 @@
     <Compile Include="CRUD\CRUD_Odgovor.cs" />
     <Compile Include="CRUD\CRUD_Recenzija.cs" />
     <Compile Include="CRUD\CRUD_Reklamacija.cs" />
-    <Compile Include="Klase\IspisOdgovora.cs" />
-    <Compile Include="Klase\IspisProizvoda.cs" />
-    <Compile Include="Klase\IspisRecenzija.cs" />
     <Compile Include="Dobavljac.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Kategorija.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Klase\IspisOdgovora.cs" />
+    <Compile Include="Klase\IspisProizvoda.cs" />
+    <Compile Include="Klase\IspisRecenzija.cs" />
     <Compile Include="Klase\IspisReklamacija.cs" />
     <Compile Include="Klase\OpisProizvoda.cs" />
     <Compile Include="Klase\PorijekloDobavljaca.cs" />
@@ -99,9 +99,6 @@
     <Compile Include="Odgovor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Podnesak.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Proizvod.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -112,16 +109,16 @@
     <Compile Include="Reklamacija.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Relacija.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="REPO\REPO_ObracunTrgovine.cs" />
     <Compile Include="REPO\REPO_Odgovor.cs" />
     <Compile Include="REPO\REPO_Recenzija.cs" />
     <Compile Include="REPO\REPO_Reklamacija.cs" />
     <Compile Include="ToolBox\Administrator.cs" />
+    <Compile Include="ToolBox\Grafikon.cs" />
     <Compile Include="ToolBox\Korisnik.cs" />
+    <Compile Include="Klase\PrihodTrgovine.cs" />
     <Compile Include="ToolBox\Proizvod.cs" />
+    <Compile Include="Klase\RashodTrgovine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
