--- a/Software/Dino_Sokec/ClassLibrary2/App.config
+++ b/Software/Dino_Sokec/ClassLibrary2/App.config
@@ -10,6 +10,6 @@
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		<add name="Entiteti" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+		
+	<add name="Entiteti" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
