Dodane su iznimke i unit test

--- a/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
+++ b/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Dobavljac.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Iznimke\NepotpunaPoljaPriUnosu.cs" />
+    <Compile Include="Iznimke\SpremanjeKorisnickaRecenzija.cs" />
     <Compile Include="Kategorija.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
