Reklamacija Povijest i trenutan popis reklamacija

--- a/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
+++ b/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
@@ -119,6 +119,8 @@
     <Compile Include="REPO\REPO_Odgovor.cs" />
     <Compile Include="REPO\REPO_Recenzija.cs" />
     <Compile Include="REPO\REPO_Reklamacija.cs" />
+    <Compile Include="Klase\PopisProizvodaReklamacija.cs" />
+    <Compile Include="Klase\PovijestReklamacija.cs" />
     <Compile Include="ToolBox\TOOL_Administrator.cs" />
     <Compile Include="ToolBox\TOOL_Grafikon.cs" />
     <Compile Include="ToolBox\TOOL_Korisnik.cs" />
@@ -126,6 +128,7 @@
     <Compile Include="ToolBox\TOOL_Proizvod.cs" />
     <Compile Include="Klase\RashodTrgovine.cs" />
     <Compile Include="ToolBox\TOOL_Recenzija.cs" />
+    <Compile Include="ToolBox\TOOL_Reklamacija.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
