--- a/Software/Dino_Sokec/UnitTestProject1/UnitTest1.csproj
+++ b/Software/Dino_Sokec/UnitTestProject1/UnitTest1.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ProvjeraOsoba.UnitTesting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
