--- a/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
+++ b/Software/Dino_Sokec/ClassLibrary2/ClassLibrary2.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Klase\KorisnickoImeKorisnika.cs" />
     <Compile Include="Klase\OpisProizvoda.cs" />
     <Compile Include="Klase\PorijekloDobavljaca.cs" />
+    <Compile Include="Klase\PovijestOdgovoraReklamacija.cs" />
     <Compile Include="Klase\PovijestRecenzija.cs" />
     <Compile Include="Korisnik.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -126,6 +127,7 @@
     <Compile Include="ToolBox\TOOL_Grafikon.cs" />
     <Compile Include="ToolBox\TOOL_Korisnik.cs" />
     <Compile Include="Klase\PrihodTrgovine.cs" />
+    <Compile Include="ToolBox\TOOL_Odgovor.cs" />
     <Compile Include="ToolBox\TOOL_Proizvod.cs" />
     <Compile Include="Klase\RashodTrgovine.cs" />
     <Compile Include="ToolBox\TOOL_Recenzija.cs" />
